处理链接mongoengine问题，现在后台总算可以启动了；在本地运行也可以了；

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -49,12 +49,12 @@ http {
         #access_log  logs/host.access.log  main;
         location / {
             include       /usr/local/etc/nginx/uwsgi_params;
-            uwsgi_pass    unix:/tmp/koala_app_uwsgi.sock;
+            uwsgi_pass    unix:/tmp/golden_app_uwsgi.sock;
         }
 
         location /admin {
             include       /usr/local/etc/nginx/uwsgi_params;
-            uwsgi_pass    unix:/tmp/koala_admin_uwsgi.sock;
+            uwsgi_pass    unix:/tmp/golden_admin_uwsgi.sock;
         }
 
         #error_page  404              /404.html;
